@@ -446,8 +446,8 @@ package require Tk 8.6
 
 	bind $canvas <Up>		[namespace code {my UpDown -1}]
 	bind $canvas <Down>		[namespace code {my UpDown  1}]
-	bind $canvas <Left>		[namespace code {my LeftRight -1}]
-	bind $canvas <Right>		[namespace code {my LeftRight  1}]
+	bind $canvas <<PrevChar>>	[namespace code {my LeftRight -1}]
+	bind $canvas <<NextChar>>	[namespace code {my LeftRight  1}]
 	bind $canvas <Return>		[namespace code {my ReturnKey}]
 	bind $canvas <KeyPress>		[namespace code {my KeyPress %A}]
 	bind $canvas <Control-KeyPress> ";"
