@@ -231,11 +231,6 @@ if {[tk windowingsystem] ne "win32"} {
 
 # Additional emacs-like bindings:
 
-bind Spinbox <Control-a> {
-    if {!$tk_strictMotif} {
-	::tk::EntrySetCursor %W 0
-    }
-}
 bind Spinbox <Control-b> {
     if {!$tk_strictMotif} {
 	::tk::EntrySetCursor %W [expr {[%W index insert] - 1}]
@@ -244,11 +239,6 @@ bind Spinbox <Control-b> {
 bind Spinbox <Control-d> {
     if {!$tk_strictMotif} {
 	%W delete insert
-    }
-}
-bind Spinbox <Control-e> {
-    if {!$tk_strictMotif} {
-	::tk::EntrySetCursor %W end
     }
 }
 bind Spinbox <Control-f> {
