@@ -287,11 +287,6 @@ if {[tk windowingsystem] eq "aqua"} {
 
 # Additional emacs-like bindings:
 
-bind Text <Control-a> {
-    if {!$tk_strictMotif} {
-	tk::TextSetCursor %W {insert display linestart}
-    }
-}
 bind Text <Control-b> {
     if {!$tk_strictMotif} {
 	tk::TextSetCursor %W insert-1displayindices
@@ -300,11 +295,6 @@ bind Text <Control-b> {
 bind Text <Control-d> {
     if {!$tk_strictMotif && [%W compare end != insert+1c]} {
 	%W delete insert
-    }
-}
-bind Text <Control-e> {
-    if {!$tk_strictMotif} {
-	tk::TextSetCursor %W {insert display lineend}
     }
 }
 bind Text <Control-f> {
@@ -390,23 +380,11 @@ bind Text <Meta-Delete> {
 # Macintosh only bindings:
 
 if {[tk windowingsystem] eq "aqua"} {
-bind Text <Option-Left> {
-    tk::TextSetCursor %W [tk::TextPrevPos %W insert tcl_startOfPreviousWord]
-}
-bind Text <Option-Right> {
-    tk::TextSetCursor %W [tk::TextNextWord %W insert]
-}
 bind Text <Option-Up> {
     tk::TextSetCursor %W [tk::TextPrevPara %W insert]
 }
 bind Text <Option-Down> {
     tk::TextSetCursor %W [tk::TextNextPara %W insert]
-}
-bind Text <Shift-Option-Left> {
-    tk::TextKeySelect %W [tk::TextPrevPos %W insert tcl_startOfPreviousWord]
-}
-bind Text <Shift-Option-Right> {
-    tk::TextKeySelect %W [tk::TextNextWord %W insert]
 }
 bind Text <Shift-Option-Up> {
     tk::TextKeySelect %W [tk::TextPrevPara %W insert]
@@ -414,7 +392,7 @@ bind Text <Shift-Option-Up> {
 bind Text <Shift-Option-Down> {
     tk::TextKeySelect %W [tk::TextNextPara %W insert]
 }
-bind Text <Control-v> {
+bind Text <<Paste>> {
     tk::TextScrollPages %W 1
 }
 
